First edit - added a link to a video

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -238,7 +238,9 @@
                                             Applications</em>, Boulder, Colorado (July/August 2013).
                                 </td></tr>
                                 <tr><td><a href="clisby_fast_algorithms2013.pdf">The importance of fast algorithms for simulating complex
-                                            systems</a>, <em>Mathematics of Planet Earth
+                                            systems</a> (<a
+                                            href="https://docs.google.com/file/d/0B99otwie9pb8ejFkeE05ZDFaa00/edit?usp=sharing">video
+                                            version</a>), <em>Mathematics of Planet Earth
                                             Conference</em>, Melbourne (July 2013). Provides a
                                         comparison between the gains from computer hardware and
                                         better algorithms over the past 30 years. For a general
