Added links to smSimulator downloads on Google Drive, fixed index.html links

--- a/projects/sm_simulator/index.html
+++ b/projects/sm_simulator/index.html
@@ -169,11 +169,14 @@
         Download files: 
         <a href="download/source.zip">source.zip</a> (1 MB, to run in the <a
             href="http://www.processing.org">Processing</a> interpreter), <a
-            href="download/application.linux32.zip">Linux 32 bit</a> (6.4 MB),
-        <a href="download/application.linux64.zip">Linux 64 bit</a> (6.4 MB),
-        <a href="download/application.macosx.zip">MacOS X</a> (6.7 MB), <a
-            href="download/application.windows32.zip">Windows 32 bit</a> (6.4
-        MB), and <a href="download/application.windows64.zip">Windows 64
+            href="https://drive.google.com/file/d/0B99otwie9pb8bDFWeTJYSkVFbW8/view?usp=sharing">Linux 32 bit</a> (6.4 MB),
+        <a
+            href="https://drive.google.com/file/d/0B99otwie9pb8S29zZ3dFVnJjam8/view?usp=sharing">Linux 64 bit</a> (6.4 MB),
+        <a
+            href="https://drive.google.com/file/d/0B99otwie9pb8amdMd0xxMklEbTQ/view?usp=sharing">MacOS X</a> (38 MB, includes Java), <a
+            href="https://drive.google.com/file/d/0B99otwie9pb8akUwQ2NiV1Z2cGs/view?usp=sharing">Windows 32 bit</a> (6.4
+        MB), and <a
+            href="https://drive.google.com/file/d/0B99otwie9pb8ZHQ2MGhaVUc0TUU/view?usp=sharing">Windows 64
             bit</a> (6.4 MB).</p>
         <p>If you have trouble running the application, you may be interested in
         seeing this demo video to get an idea of what the simulation looks like:
