--- a/contact/index.html
+++ b/contact/index.html
@@ -29,8 +29,8 @@
             <div class="tnav">
                 <ul>
                     <li><a class="current" href="/">home</a></li>
-                    <li><a href="/research/index.html">research</a></li>
-                    <li><a href="/projects/index.html">projects</a></li>
+                    <li><a href="/research/">research</a></li>
+                    <li><a href="/projects/">projects</a></li>
                 </ul>
             </div> <!-- tnav -->
             <div class="bnav w3">
