Added corrected source.zip to download directory.

--- a/projects/sm_simulator/index.html
+++ b/projects/sm_simulator/index.html
@@ -167,7 +167,7 @@
         <p><b><a id="download">Download</a></b>:
         The simulation runs significantly faster and better on your computer as an application. The simulator is written in <a href="http://www.processing.org">Processing</a>, which is based on Java and runs in the Java Virtual Machine or JVM.
         Download files: 
-        <a href="download/source.zip">source.zip</a> (1 MB, to run in the <a
+        <a href="source.zip">source.zip</a> (1 MB, to run in the <a
             href="http://www.processing.org">Processing</a> interpreter), <a
             href="https://drive.google.com/file/d/0B99otwie9pb8bDFWeTJYSkVFbW8/view?usp=sharing">Linux 32 bit</a> (6.4 MB),
         <a
