Changed portrait file

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         <div id="contentblock">
             <div id="content">
                 <h1>Nathan Clisby's homepage</h1>
-                <img src="nathan_portrait.jpg" alt="me" width="20%" style="float:right;min-width:100px;">
                 <p>
+                <div class="image">
+                <img src="nathan_portrait.jpg" alt="me" width="20%" style="float:right;min-width:100px;">
+            </div>
                 Welcome to my homepage! Here you will find some details about my <a href="/research/">research</a> (including
                 lists of possible research <a href="/research/topics/">topics</a> for students and collaborators, and my <a href="/research/publications/">publications</a>),
                 and various <a href"/project/">project</a> pages where you can find interactive applications, visualisations, 
