Fixed issue at end of software page, tidied up publications.

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -64,7 +64,8 @@
                     <tr><td>
                             Nathan Clisby, Calculation of the connective constant for
                             self-avoiding walks via the pivot algorithm,
-                            <a href="http://arxiv.org/abs/1302.2106">arXiv:1302.2106</a> 
+                            <a
+                                href="http://arxiv.org/abs/1302.2106">arXiv:1302.2106</a>, 
                             <a href="http://dx.doi.org/10.1088/1751-8113/46/24/245001">J. Phys.
                                 A.: Math. Theor.</a> <b>46</b>:245001 (2013). 
                             Chosen for <a href="http://select.iop.org/">IOP Select</a>, and highlighted in
@@ -107,39 +108,39 @@
                                 href="http://dx.doi.org/10.1103/PhysRevLett.104.055702">Phys.
                                 Rev. Lett.</a> <b>104</b>, 055702 (2010). 
                         </tr>
-                        <tr><td>Ian G. Enting and N.&#160;Clisby, Submission to the
+                        <tr><td>Ian G. Enting and Nathan Clisby, Submission to the
                                 Senate Select Committee on Climate Policy, no. 360 at <a
                                     href="http://bit.ly/149cCLQ">http://bit.ly/149cCLQ</a>,
                                 and <a
                                     href="sub360_pdf.pdf">cached version</a>
                                 (2009). </td></tr>
-                        <tr><td> N.&#160;Clisby
-                                and Gordon Slade,  Polygons and the lace expansion, in
+                        <tr><td> Nathan Clisby
+                                and Gordon Slade, Polygons and the lace expansion, in
                                 <em>Polygons, Polyominoes and Polycubes</em>, Lecture
                                 notes in Physics Vol. 775, Ed. A.&#160;J.&#160;Guttmann
                                 (Springer, 2009) pp. 117&ndash;142.</tr></td> 
                         <tr><td>Ian G. Enting, D.&#160;Karoly, J.&#160;Falk,
-                                N.&#160;Clisby, R.&#160;Bodman, and D.&#160;Settle
+                                Nathan Clisby, R.&#160;Bodman, and D.&#160;Settle
                                 (CASPI), The Science of Stabilising Greenhouse Gas
                                 Concentrations, a commissioned report for the Garnaut
                                 Climate Change Review, available at <a
                                     href="http://bit.ly/bTizEv">http://bit.ly/bTizEv</a>,
                                 <a href="caspi_stabilising_ghg2008.pdf">cached version</a>
                                 (2008).
-                                <tr><td> M.&#160;Bishop, N.&#160;Clisby, and
-                                        P.&#160;Whitlock, The equation of state of hard
+                                <tr><td> Marvin Bishop, Nathan Clisby, and
+                                        Paula Whitlock, The equation of state of hard
                                         hyperspheres in nine dimensions for low to
                                         moderate densities, <a
                                             href="http://dx.doi.org/10.1063/1.2821962"> J.
                                             Chem. Phys.</a> <b>128</b>:034506
                                         (2008).</td></tr>
-                                <tr><td> N.&#160;Clisby, Richard Liang, and Gordon Slade,
+                                <tr><td> Nathan Clisby, Richard Liang, and Gordon Slade,
                                         Self&ndash;avoiding walk enumeration via the lace
                                         expansion, <a
                                             href="http://dx.doi.org/10.1088/1751-8113/40/36/003">
                                             J. Phys. A: Math. Theor.</a>
                                         <b>40</b>:10973&ndash;11017 (2007). </td></tr>
-                                <tr><td>N.&#160;Clisby and B.&#160;M.&#160;McCoy, Ninth
+                                <tr><td>Nathan Clisby and Barry M. McCoy, Ninth
                                         and Tenth Order Virial Coefficients for Hard
                                         Spheres in  <em>D</em> Dimensions, <a
                                             href="http://www.arxiv.org/abs/cond-mat/0503525">cond&ndash;mat/0503525</a>,
@@ -147,7 +148,7 @@
                                             href="http://dx.doi.org/10.1007/s10955-005-8080-0">J.
                                             Stat. Phys.</a> <b>122</b>:15&ndash;57 (2006).
                                 </td></tr>
-                                <tr><td>N.&#160;Clisby and B.&#160;M.&#160;McCoy, New
+                                <tr><td>Nathan Clisby and Barry M. McCoy, New
                                         results for virial coefficients of hard spheres in
                                         <em>D</em> dimensions, <a
                                             href="http://www.arxiv.org/abs/cond-mat/0410511">cond&ndash;mat/0410511</a>,
@@ -155,12 +156,12 @@
                                             href="http://www.ias.ac.in/pramana/v64/v64no5.htm">Pramana
                                             &#151; J. Phys.</a> <b>64</b>:775&ndash;783
                                         (2005).</td></tr>
-                                <tr><td>N.&#160;Clisby, Negative Virial Coefficients for
+                                <tr><td>Nathan Clisby, Negative Virial Coefficients for
                                         Hard Spheres, <a
                                             href="clisby_dissertation.pdf">Ph.D.
                                             thesis</a>, Stony Brook University
                                         (2004).</td></tr>
-                                <tr><td>N.&#160;Clisby and B.&#160;M.&#160;McCoy, Analytic
+                                <tr><td>Nathan Clisby and Barry M. McCoy, Analytic
                                         calculation of <em>B<sub>4</sub></em> for hard
                                         spheres in even dimensions, <a
                                             href="http://www.arxiv.org/abs/cond-mat/0303098">cond&ndash;mat/0303098</a>,
@@ -168,7 +169,7 @@
                                             href="http://dx.doi.org/10.1023/B:JOSS.0000013959.30878.d2">J.
                                             Stat. Phys.</a> <b>114</b>:1343&ndash;1361
                                         (2004).</td></tr>
-                                <tr><td>N.&#160;Clisby and B.&#160;M.&#160;McCoy,
+                                <tr><td>Nathan Clisby and Barry M. McCoy,
                                         Negative virial coefficients and the dominance
                                         of loose packed diagrams for
                                         <em>D</em>&ndash;dimensional hard spheres, <a
@@ -177,9 +178,9 @@
                                             href="http://dx.doi.org/10.1023/B:JOSS.0000013960.83555.7d">J.
                                             Stat. Phys.</a> <b>114</b>:1361&ndash;1392
                                         (2004).</td></tr>
-                                <tr><td>S.&#160;A.&#160;Canney, M.&#160;Vos,
-                                        A.&#160;S.&#160;Kheifets, N.&#160;Clisby,
-                                        I.&#160;E.&#160;McCarthy, and E.&#160;Weigold,
+                                <tr><td>Shane A. Canney, Maarten Vos,
+                                        Anatoli S. Kheifets, Nathan Clisby,
+                                        Ian E. McCarthy, and Eric Weigold,
                                         Measured energy&ndash;momentum densities of the
                                         valence band of aluminium <a
                                             href="http://dx.doi.org/10.1088/0953-8984/9/9/008">J.
@@ -188,18 +189,18 @@
                             </table>
                             <h3>Other documents</h3>
                             <table>
-                                <tr><td> N.&#160;Clisby, Richard Liang, and
+                                <tr><td> Nathan Clisby, Richard Liang, and
                                         Gordon Slade, Self&ndash;avoiding walk
                                         enumeration via the lace expansion, enumeration
                                         tables at <a
                                             href="http://www.math.ubc.ca/~slade">http://www.math.ubc.ca/&#126;slade</a>.
                                 </td></tr>
-                                <tr><td>N.&#160;Clisby and B.&#160;M.&#160;McCoy, New
+                                <tr><td>Nathan Clisby and Barry M. McCoy, New
                                         results for the virial coefficients of
                                         <em>D</em>&ndash;dimensional hard spheres,  <a
                                             href="http://www.arxiv.org/abs/cond-mat/0303101">cond&ndash;mat/0303101</a>
                                         (2003).</td></tr>
-                                <tr><td>N.&#160;Clisby and B.&#160;M.&#160;McCoy, Ninth
+                                <tr><td>Nathan Clisby and Barry M. McCoy, Ninth
                                         and Tenth Order Virial Coefficients for Hard
                                         Spheres in <em>D</em> Dimensions &#151; <a
                                             href="b10tables.pdf">Collection
@@ -403,7 +404,7 @@
                                         Appropriate for a general audience.</td></tr>
                                 <tr><td><a href="clisby_saw_rutgers06.pdf">Self&ndash;avoiding walk
                                             enumeration via the lace
-                                            expansion</a> (with Richard Liang, and
+                                            expansion</a> (with Richard Liang and
                                         Gordon Slade),
                                         <em>Statistical Mechanics Conference</em>, Rutgers University (December
                                         17&ndash;19, 2006). For a statistical mechanics audience, only includes preliminary analysis.</td></tr>
