--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                 </p>
                 <p>
                 This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,
-                which had fallen into disrepair. With the goal of maintaining the new version indefinitely, I've chosen to create
+                which had fallen into disrepair. With the goal of
+                maintaining the new version indefinitely (at least the
+                url's), I've chosen to create
                 a simple website using only css, html, and javascript.
                 </p>
                 <p>
