--- a/projects/index.html
+++ b/projects/index.html
@@ -51,181 +51,7 @@
 
     <div id="contentblock">
         <div id="content">
-            <p>
-            <h1>Welcome!</h1>
-            This is Nathan's webpage.
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <p>
-            It does sound like an exciting adventure is in store, 
-            but at the same time you can't help but wonder about the
-            motives of the mysterious owner.
-            </p>
-            <p>
-            It does sound like an exciting adventure is in store, 
-            but at the same time you can't help but wonder about the
-            motives of the mysterious owner.
-            </p>
-            <p>
-            It does sound like an exciting adventure is in store, 
-            but at the same time you can't help but wonder about the
-            motives of the mysterious owner.
-            </p>
-
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            </p>
-
-            <h2>Updates/Highlights</h2>
+            <h1>Projects</h1>
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
