--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <h1>Nathan Clisby's homepage</h1>
                 <p>
                 <div class="image">
-                <img src="nathan_portrait.jpg" alt="me" width="20%" style="float:right;min-width:100px;">
+                <img src="nathan_portrait.jpg" alt="me" width="20%"
+                style="float:right;min-width:100px;margin: 10px 0px 0px
+                10px">
             </div>
                 Welcome to my homepage! Here you will find some details about my <a href="/research/">research</a> (including
                 lists of possible research <a href="/research/topics/">topics</a> for students and collaborators, and my <a href="/research/publications/">publications</a>),
@@ -66,7 +68,7 @@
                 which had fallen into disrepair. With the goal of
                 maintaining the new version indefinitely (at least the
                 url's), I've chosen to create
-                a simple website using only css, html, and javascript.
+                a simple website using only html, css, and javascript.
                 </p>
                 <p>
             </div> <!-- content -->
