--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 and in future software for download. 
                 </p>
                 <p>
-                I'm a mathematical and computational physicist with an ARC Future Fellowship in the 
+                I'm a mathematical physicist with an ARC Future Fellowship in the 
                 <a href="http://www.ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the 
                 <a href="http://www.unimelb.edu.au/">University of Melbourne</a>.
                 </p>
