--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
                 <p>
                 I'm a mathematical physicist with an ARC Future Fellowship in the 
                 <a href="http://www.ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the 
-                <a href="http://www.unimelb.edu.au/">University of Melbourne</a>.
+                <a href="http://www.unimelb.edu.au/">University of
+                    Melbourne</a>. I'm also an associate investigator of <a
+                    href="http://www.complex.org.au/">MASCOS</a>.
                 </p>
-                <p>
-                </p>
+                <!--<p>-->
+                <!--</p>-->
                 <p>
                 This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,
                 which had fallen into disrepair. With the goal of
