--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
                 Welcome to my homepage! Here you will find some details about my <a href="/research/">research</a> (including
                 lists of possible research <a href="/research/topics/">topics</a> for students and collaborators, and my <a href="/research/publications/">publications</a>),
-                and various <a href"/project/">project</a> pages where you can find interactive applications, visualisations, 
+                and various <a href="/project/">project</a> pages where you can find interactive applications, visualisations, 
                 and in future software for download. 
                 </p>
                 <p>
@@ -63,8 +63,6 @@
                     Melbourne</a>. I'm also an associate investigator of <a
                     href="http://www.complex.org.au/">MASCOS</a>.
                 </p>
-                <!--<p>-->
-                <!--</p>-->
                 <p>
                 This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,
                 which had fallen into disrepair. With the goal of
@@ -72,7 +70,6 @@
                 url's), I've chosen to create
                 a simple website using only html, css, and javascript.
                 </p>
-                <p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
         <div id="push"></div>
