Added content to backtracker, also removed junk from /research/topics/

--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
                 style="float:right;min-width:100px;margin: 10px 0px 0px
                 10px">
             </div>
-                Welcome to my homepage! Here you will find some details about my <a href="/research/">research</a> (including
-                lists of possible research <a href="/research/topics/">topics</a> for students and collaborators, and my <a href="/research/publications/">publications</a>),
-                and various <a href="/project/">project</a> pages where you can find interactive applications, visualisations, 
-                and in future software for download. 
-                </p>
-                <p>
+            Welcome to my homepage! 
                 I'm a mathematical physicist with an ARC Future Fellowship in the 
                 <a href="http://www.ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the 
                 <a href="http://www.unimelb.edu.au/">University of
                     Melbourne</a>. I'm also an associate investigator of <a
                     href="http://www.complex.org.au/">MASCOS</a>.
+                </p>
+                <p>
+            Here you will find some details about my <a href="/research/">research</a> (including
+                lists of possible research <a href="/research/topics/">topics</a> for students and collaborators, and my <a href="/research/publications/">publications</a>),
+                and various <a href="/project/">project</a> pages where you can find interactive applications, visualisations, 
+                and in future software for download. 
                 </p>
                 <p>
                 This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,
