--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -52,6 +52,48 @@
     <div id="contentblock">
         <div id="content">
             <h1>Backtracker</h1>
+            <p>
+            Inspired by an idea from <a
+                href="http://www.newcastle.edu.au/profile/judy-anne-osborn">Judy-anne
+                Osborn</a>, I've been working with
+            <a href="http://maths-people.anu.edu.au/~brent/">Richard
+                Brent</a>,
+            <a href="http://maths-people.anu.edu.au/~leopardi/">Paul
+                Leopardi</a>,
+            and <a
+                href="http://www.newcastle.edu.au/profile/nathan-vanmaastricht">Nathan
+                Van Maastricht</a> (as well as Judy-anne)
+            to create a web application for human-guided computer search
+            in combinatorial search problems. The idea is to present a
+            visual representation of the backtracking search tree,
+            together with some information about candidate choices, and
+            then allow the human to guide the computer search through
+            their own heuristics (intuition).
+            </p>
+            <p>
+            So far we have a prototype version working for
+            decomposition of a putative Gram matrix with the goal of
+            finding maximal determinant matrices (the original
+            inspiration), and two toy problems: open 
+            <a
+                href="http://en.wikipedia.org/wiki/Knight%27s_tour">knight's
+                tours</a> on
+            arbitrary boards, and the <a
+                href="http://en.wikipedia.org/wiki/Eight_queens_puzzle">N
+                queens</a> problem.
+            </p>
+            <p>
+            There is much still to do! The remaining stages will involve
+            elements of game design, javascript programming, server side
+            scripting, and research into the specific applications.
+            </p>
+            <p>
+            You can play with the app here (not live yet).
+            </p>
+            <p>
+            Brief instructions:
+            </p>
+
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
@@ -59,7 +101,7 @@
     <div id="bottombar">
             <div id="footer">
                <div id="footquote">
-                    <script src="includesnippet.js"></script>
+                    <script src="/includesnippet.js"></script>
                 </div>
             </div> <!-- footer -->
     </div> <!-- bottombar -->
