--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -43,8 +43,21 @@
 
     <div id="contentblock">
         <div id="content">
+            <h1>Topics</h1>
+        </div> <!-- content -->
+    </div> <!-- contentblock -->
+    <div id="push"></div>
+    </div> <!-- topwrapper -->
+    <div id="bottombar">
+            <div id="footer">
+               <div id="footquote">
+                    <script src="includesnippet.js"></script>
+                </div>
+            </div> <!-- footer -->
+    </div> <!-- bottombar -->
+</body>
+</html>
             <p>
-            <h1>Welcome!</h1>
             This is Nathan's webpage.
             <blockquote>
                 A very nice quote.
@@ -218,16 +231,3 @@
             </p>
 
             <h2>Updates/Highlights</h2>
-        </div> <!-- content -->
-    </div> <!-- contentblock -->
-    <div id="push"></div>
-    </div> <!-- topwrapper -->
-    <div id="bottombar">
-            <div id="footer">
-               <div id="footquote">
-                    <script src="includesnippet.js"></script>
-                </div>
-            </div> <!-- footer -->
-    </div> <!-- bottombar -->
-</body>
-</html>
