Changed wording at /

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                 10px">
             </div>
             Welcome to my homepage! 
-                I'm a mathematical physicist with an ARC Future Fellowship in the 
+                I'm a mathematical physicist in the 
                 <a href="http://www.ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the 
                 <a href="http://www.unimelb.edu.au/">University of
-                    Melbourne</a>. I'm also an associate investigator of <a
+                    Melbourne</a>, supported by an ARC Future Fellowship.
+                I'm also an associate investigator of <a
                     href="http://www.complex.org.au/">MASCOS</a>.
                 </p>
                 <p>
