Reduced file sizes in SAW videos, fixed a typo in /software/

--- a/research/index.html
+++ b/research/index.html
@@ -45,6 +45,20 @@
     <div id="contentblock">
         <div id="content">
             <h1>Research</h1>
+
+            This landing page will provide a synopsis of my
+            research interests, with a more detailed list of possible
+            research topics and directions for potential students and
+            collaborators on the <a
+                href="topics/">topics</a> page. My publications are
+            listed and many talks are available for download on my <a
+                href="publications">publications</a> page.
+
+
+
+            * big picture
+
+
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
