--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -57,10 +57,11 @@
         <h1>Videos and images of self-avoiding walks</h1>
         <!--<p>Statistical mechanics simulator due to <a href="http://lattice.complex.unimelb.edu.au/home/">Nathan Clisby</a>, 2013.</p>-->
             <div class="image"  style =
-                "float:right;max-width:370px;width:40%min-width:200px;">
+                "float:right;max-width:370px;width:50%min-width:200px;">
+        <!--actual width is 350px-->
                 <img src="sawsmall.gif"
                 alt="Animation of self-avoiding walk of 1048575 steps on
-                the simple cubic lattice." style="width:90%" />
+                the simple cubic lattice." style="width:90%;max-width:350px" />
                 <br/>
                 <p class="caption">Animation of
                     self-avoiding walk of 1048576 steps on the simple
@@ -70,8 +71,11 @@
             </div> 
             <br/>
             <div class="image"  style =
-                "clear:right;float:right;width:30%;height:30%;min-width:200px;">
-            <img src="saw1000_318shq_alpha.png" alt="SAW of 5000 steps on Z^3" height="90%" width="90%" style="float:center;">
+                "clear:right;float:right;max-width:330px;width:30%;height:30%;min-width:200px;">
+        <!--actual width is 300px-->
+            <img src="saw3d_5000steps.png" alt="SAW of 5000 steps
+            on Z^3" height="90%" width="90%"
+            style="float:center;max-width:300px;">
                 <br/>
                 <p class="caption">SAW of 5000 steps on the simple cubic lattice.</p>
             </div> 
@@ -88,7 +92,7 @@
             <div class="image"  style =
                 "float:left;width:25%;height:25%;min-width:200px;">
                 <!--<img src="d2saw25.png" alt="SAW of 2^25 steps on Z^2">-->
-            <img src="d2saw25.png" alt="SAW of 2^25 steps on Z^2" height="90%" width="90%" style="float:center;">
+            <img src="saw2d_2_25steps.png" alt="SAW of 2^25 steps on Z^2" height="90%" width="90%" style="float:center;">
                 <br/>
                 <p class="caption">SAW of 2<sup>25</sup> steps on
                 the square lattice.</p>
