Eliminated one embedded video in saw_videos, trying to speed things up.

--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -82,8 +82,7 @@
         <p>
             I've made some high resolution videos on YouTube of self-avoiding walks with 100 million
             steps on the square lattice (YouTube <a
-                href="http://www.youtube.com/watch?v=WPUH8Rs-oig">link</a>,
-            embedded <a href="#saw2d">below</a>) and simple cubic
+                href="http://www.youtube.com/watch?v=WPUH8Rs-oig">link</a>) and simple cubic
             lattice (YouTube <a
                 href="http://www.youtube.com/watch?v=GHzfadEuk1U">link</a>, embedded <a href="#saw3d">below</a>). 
             Both videos look much better in HD, so choose the
@@ -134,29 +133,16 @@
         <div class="spacer"></div>
         <div
             style="display:block;margin-left:auto;margin-right:auto;width:560px;">
-            <p id="saw2d" style="display:block;">
-        Video of a self-avoiding walk with 100 million steps on the
-        square lattice.<br/>
-        <!--<iframe width="560" height="315"-->
-        <div style="margin-left:auto;margin-right:auto;">
-        <iframe width="560" height="315"
-            src="//www.youtube.com/embed/WPUH8Rs-oig?start=20"
-            frameborder="0" allowfullscreen></iframe>
-    </div> <!-- center -->
-        </p>
-        <!--<div class="spacer"></div>-->
-        <!--<div class="spacer"></div>-->
-        <!--<div class="spacer"></div>-->
             <p id="saw3d" style="display:block;">
-        Video of a self-avoiding walk with 100 million steps on the
-        simple cubic lattice.<br/>
-        <div style="margin-left:auto;margin-right:auto;">
-        <iframe width="560" height="315"
-            src="http://www.youtube.com/embed/GHzfadEuk1U?start=20"
-            frameborder="0" allowfullscreen></iframe>
-        </p>
-    </div> <!-- center -->
-</div>
+            Video of a self-avoiding walk with 100 million steps on the
+            simple cubic lattice.<br/>
+            <div style="margin-left:auto;margin-right:auto;">
+                <iframe width="560" height="315"
+                    src="http://www.youtube.com/embed/GHzfadEuk1U?start=20"
+                    frameborder="0" allowfullscreen></iframe>
+                </p>
+            </div> <!-- center -->
+        </div>
             <div class="spacer"></div>
             <div class="spacer"></div>
             <div class="spacer"></div>
