Testing speed with no embedded video.

--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -131,6 +131,7 @@
         <div class="spacer"></div>
         <div class="spacer"></div>
         <div class="spacer"></div>
+        <!--
         <div
             style="display:block;margin-left:auto;margin-right:auto;width:560px;">
             <p id="saw3d" style="display:block;">
@@ -142,7 +143,8 @@
                     frameborder="0" allowfullscreen></iframe>
                 </p>
             </div> <!-- center -->
-        </div>
+        </div> <-- video block -->
+        -->
             <div class="spacer"></div>
             <div class="spacer"></div>
             <div class="spacer"></div>
