--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>SAW videos and images</title>
-    <link rel="stylesheet" type="text/css" href="/nc.css">
+    <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
@@ -131,7 +131,6 @@
         <div class="spacer"></div>
         <div class="spacer"></div>
         <div class="spacer"></div>
-        <!--
         <div
             style="display:block;margin-left:auto;margin-right:auto;width:560px;">
             <p id="saw3d" style="display:block;">
@@ -143,8 +142,7 @@
                     frameborder="0" allowfullscreen></iframe>
                 </p>
             </div> <!-- center -->
-        </div> <-- video block -->
-        -->
+        </div> <!-- video block -->
             <div class="spacer"></div>
             <div class="spacer"></div>
             <div class="spacer"></div>
