Added Google tracking everywhere.

--- a/projects/sm_simulator/index.html
+++ b/projects/sm_simulator/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <title>simulator</title>
+    <meta name="description" content="Simulator for visualisation of the pivot algorithm and other approaches for self-avoiding walks and models in statistical mechanics.">
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -62,7 +63,17 @@
     }
 
 </script>
-        <meta name="description" content="Simulator for visualisation of the pivot algorithm and other approaches for self-avoiding walks and models in statistical mechanics.">
+    <script>
+        //Google analytics tracking
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new
+            Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-58103598-1', 'auto');
+        ga('send', 'pageview');
+    </script>
     </head>
     <body>
     <div id="topwrapper">
