--- a/projects/software/index.html
+++ b/projects/software/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>software</title>
-    <link rel="stylesheet" type="text/css" href="/css/nc.css">
+    <link rel="stylesheet" type="text/css" href="/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
@@ -20,9 +20,17 @@
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-        <meta name="description" content="Videos and images of
-        self-avoiding walks generated via an efficient implementation of
-        the pivot algorithm.">
+    <script>
+        //Google analytics tracking
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new
+            Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-58103598-1', 'auto');
+        ga('send', 'pageview');
+    </script>
     </head>
     <body>
     <div id="topwrapper">
