Added canonical links. Will this allow browsers to refresh?

--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <title>SAW videos and images</title>
+    <link rel="canonical" href="/projects/saw_videos/" />
     <meta name="description" content="Videos and images of
     self-avoiding walks generated via an efficient implementation of
     the pivot algorithm.">
