--- a/projects/sm_simulator/index.html
+++ b/projects/sm_simulator/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <title>simulator</title>
+    <link rel="canonical" href="/projects/sm_simulator/" />
     <meta name="description" content="Simulator for visualisation of the pivot algorithm and other approaches for self-avoiding walks and models in statistical mechanics.">
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
