--- a/projects/software/index.html
+++ b/projects/software/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <title>software</title>
+    <link rel="canonical" href="/projects/software/" />
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
