--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -1,7 +1,8 @@
-
+<!DOCTYPE html>
 <html>
 <head>
     <title>publications</title>
+    <link rel="canonical" href="/research/publications/" />
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
